--- a/public/leads.html
+++ b/public/leads.html
@@ -1,88 +1,63 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Leads</title>
-  <style>
-    body{font-family:sans-serif;max-width:900px;margin:2rem auto}
-    table{border-collapse:collapse;width:100%} th,td{border:1px solid #ccc;padding:6px}
-    input,button{margin:2px}
-  </style>
-</head>
-<body>
-  <h1>Leads</h1>
-  <div>
-    <input id="name"  placeholder="Name">
-    <input id="phone" placeholder="Phone">
-    <input id="email" placeholder="Email">
-    <input id="program" placeholder="Interested Program">
-    <button id="add">Add Lead</button>
-  </div>
+﻿<!DOCTYPE html><html><head><meta charset="utf-8"><title>Leads</title>
+<style>body{font-family:sans-serif;max-width:1000px;margin:20px auto}table{border-collapse:collapse;width:100%}th,td{border:1px solid #ccc;padding:6px}</style>
+</head><body>
+<h1>Leads</h1>
+<p><a href="index.html">Back</a> | <a href="students.html">Students</a></p>
 
-  <h2>Lead List</h2>
-  <table>
-    <thead><tr><th>ID</th><th>Name</th><th>Phone</th><th>Email</th><th>Program</th><th>Actions</th></tr></thead>
-    <tbody id="body"></tbody>
-  </table>
+<h2>Add Lead</h2>
+<div>
+  <label>Name <input id="name"></label>
+  <label>Phone <input id="phone"></label>
+  <label>Email <input id="email"></label>
+  <label>Program <input id="prog"></label>
+  <label>Date <input id="date" type="date"></label>
+  <label>Notes <input id="notes"></label>
+  <button id="add">Add</button>
+</div>
 
-  <p><a href="index.html">Back to Main Page</a></p>
+<h2>Leads</h2>
+<table>
+  <thead><tr><th>ID</th><th>Name</th><th>Phone</th><th>Email</th><th>Program</th><th>Date</th><th>Notes</th><th>Actions</th></tr></thead>
+  <tbody id="tb"></tbody>
+</table>
 
-  <script>
-    async function load(){
-      const r = await fetch('/api/leads');
-      const rows = await r.json();
-      const tb = document.getElementById('body'); tb.innerHTML='';
-      rows.forEach(L=>{
-        const [first,...rest] = String(L.name||'').trim().split(' ');
-        const last = rest.join(' ');
-        const toStudents = `students.html?first_name=${encodeURIComponent(first||'')}&last_name=${encodeURIComponent(last||'')}&phone=${encodeURIComponent(L.phone||'')}&email=${encodeURIComponent(L.email||'')}&program=${encodeURIComponent(L.interested_program||'')}`;
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${L.id}</td>
-          <td>${L.name||''}</td>
-          <td>${L.phone||''}</td>
-          <td>${L.email||''}</td>
-          <td>${L.interested_program||''}</td>
-          <td>
-            <button class="edit" data-id="${L.id}">Edit</button>
-            <button class="del"  data-id="${L.id}">Delete</button>
-            <a href="${toStudents}">Lead → Student</a>
-          </td>`;
-        tb.appendChild(tr);
-      });
-    }
-
-    document.addEventListener('click', async (e)=>{
-      if(e.target.id==='add'){
-        const payload = {
-          name:  document.getElementById('name').value.trim(),
-          phone: document.getElementById('phone').value.trim() || null,
-          email: document.getElementById('email').value.trim() || null,
-          interested_program: document.getElementById('program').value.trim() || null
-        };
-        if(!payload.name){ alert('Name is required'); return; }
-        const r = await fetch('/api/leads', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload) });
-        if(r.ok){ document.getElementById('name').value=''; load(); } else alert('Error adding lead');
-      }
-      if(e.target.matches('.del')){
-        const id = e.target.dataset.id;
-        if(!confirm('Delete this lead?')) return;
-        const r = await fetch('/api/leads/'+id, { method:'DELETE' });
-        if(r.ok) load(); else alert('Error deleting');
-      }
-      if(e.target.matches('.edit')){
-        const id = e.target.dataset.id;
-        const L = await (await fetch('/api/leads/'+id)).json();
-        const name  = prompt('Name:',  L.name||'');  if(name===null) return;
-        const phone = prompt('Phone:', L.phone||''); if(phone===null) return;
-        const email = prompt('Email:', L.email||''); if(email===null) return;
-        const prog  = prompt('Interested Program:', L.interested_program||''); if(prog===null) return;
-        const r = await fetch('/api/leads/'+id, { method:'PUT', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ name, phone, email, interested_program: prog }) });
-        if(r.ok) load(); else alert('Error updating');
-      }
-    });
-
-    load();
-  </script>
-</body>
-</html>
+<script>
+function fmt(d){return d?d:'';}
+async function load(){
+  const r=await fetch('/api/leads'); const list=await r.json(); const tb=document.getElementById('tb'); tb.innerHTML='';
+  (list||[]).forEach(x=>{
+    const tr=document.createElement('tr');
+    tr.innerHTML = `
+      <td>${x.id}</td><td>${fmt(x.name)}</td><td>${fmt(x.phone)}</td><td>${fmt(x.email)}</td>
+      <td>${fmt(x.interested_program)}</td><td>${fmt(x.date)}</td><td>${fmt(x.notes)}</td>
+      <td>
+        <button class="edit" data-id="${x.id}">Edit</button>
+        <button class="del" data-id="${x.id}">Delete</button>
+        <a href="students.html?first_name=${encodeURIComponent((x.name||'').split(' ')[0]||'')}&last_name=${encodeURIComponent((x.name||'').split(' ').slice(1).join(' ')||'')}&phone=${encodeURIComponent(x.phone||'')}&email=${encodeURIComponent(x.email||'')}&program=${encodeURIComponent(x.interested_program||'')}">→ Add to Students</a>
+      </td>`;
+    tb.appendChild(tr);
+  });
+}
+document.getElementById('add').onclick=async()=>{
+  const payload={name:document.getElementById('name').value,phone:document.getElementById('phone').value,email:document.getElementById('email').value,interested_program:document.getElementById('prog').value,date:document.getElementById('date').value,notes:document.getElementById('notes').value};
+  const r=await fetch('/api/leads',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
+  if(!r.ok){alert('Error adding');return;} load();
+};
+document.addEventListener('click',async(e)=>{
+  if(e.target.matches('.del')){ if(!confirm('Delete lead?')) return;
+    const r=await fetch('/api/leads/'+e.target.dataset.id,{method:'DELETE'}); if(r.ok) load(); else alert('Delete failed'); }
+  if(e.target.matches('.edit')){
+    const id=e.target.dataset.id; const row=e.target.closest('tr'); const t=row.children;
+    const name=prompt('Name:', t[1].textContent)||''; if(name===null) return;
+    const phone=prompt('Phone:', t[2].textContent)||''; if(phone===null) return;
+    const email=prompt('Email:', t[3].textContent)||''; if(email===null) return;
+    const prog=prompt('Program:', t[4].textContent)||''; if(prog===null) return;
+    const date=prompt('Date (YYYY-MM-DD):', t[5].textContent)||''; if(date===null) return;
+    const notes=prompt('Notes:', t[6].textContent)||''; if(notes===null) return;
+    const r=await fetch('/api/leads/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({name,phone,email,interested_program:prog,date,notes})});
+    if(r.ok) load(); else alert('Update failed');
+  }
+});
+load();
+</script>
+</body></html>
