--- a/public/expenses.html
+++ b/public/expenses.html
@@ -1,89 +1,57 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Expenses</title>
-  <style>
-    body{font-family:sans-serif;max-width:720px;margin:2rem auto}
-    table{border-collapse:collapse;width:100%} th,td{border:1px solid #ccc;padding:6px}
-    input,select,button{margin:2px}
-  </style>
-</head>
-<body>
-  <h1>Expenses</h1>
+﻿<!DOCTYPE html><html><head><meta charset="utf-8"><title>Expenses</title>
+<style>body{font-family:sans-serif;max-width:900px;margin:20px auto}table{border-collapse:collapse;width:100%}th,td{border:1px solid #ccc;padding:6px}</style>
+</head><body>
+<h1>Expenses</h1>
+<p><a href="index.html">Back</a></p>
 
-  <h2>Add Expense</h2>
-  <div>
-    <label>Vendor: <input id="vendor"></label>
-    <label>Amount: <input type="number" id="amount" min="0" step="0.01" style="width:7rem"></label>
-    <label>Date: <input type="date" id="date"></label>
-    <label>Taxable:
-      <select id="taxable"><option value="1">Taxable</option><option value="0">Non-Taxable</option></select>
-    </label>
-    <button id="addBtn">Add Expense</button>
-  </div>
+<h2>Add Expense</h2>
+<div>
+  <label>Vendor <input id="vendor"></label>
+  <label>Amount <input id="amount" type="number" step="0.01"></label>
+  <label>Date <input id="date" type="date"></label>
+  <label>Taxable
+    <select id="taxable"><option value="1">Yes</option><option value="0">No</option></select>
+  </label>
+  <button id="add">Add</button>
+</div>
 
-  <h2>Expense List</h2>
-  <table>
-    <thead><tr><th>ID</th><th>Vendor</th><th>Amount</th><th>Date</th><th>Taxable</th><th>Actions</th></tr></thead>
-    <tbody id="body"></tbody>
-  </table>
+<h2>Expense List</h2>
+<table>
+  <thead><tr><th>ID</th><th>Vendor</th><th>Amount</th><th>Date</th><th>Taxable</th><th>Actions</th></tr></thead>
+  <tbody id="tb"></tbody>
+</table>
 
-  <p><a href="index.html">Back to Main Page</a></p>
-
-  <script>
-    async function load(){
-      const r=await fetch('/api/expenses'); const list=await r.json();
-      const tb=document.getElementById('body'); tb.innerHTML='';
-      (list||[]).forEach(x=>{
-        const tr=document.createElement('tr');
-        tr.innerHTML = `
-          <td>${x.id}</td>
-          <td>${x.vendor||''}</td>
-          <td>$${Number(x.amount||0).toFixed(2)}</td>
-          <td>${x.date||''}</td>
-          <td>${Number(x.taxable)?'Yes':'No'}</td>
-          <td>
-            <button class="edit" data-id="${x.id}">Edit</button>
-            <button class="del"  data-id="${x.id}">Delete</button>
-          </td>`;
-        tb.appendChild(tr);
-      });
-    }
-
-    document.getElementById('addBtn').addEventListener('click', async ()=>{
-      const vendor = document.getElementById('vendor').value.trim() || null;
-      const amount = document.getElementById('amount').value;
-      const date   = document.getElementById('date').value;
-      const taxable= document.getElementById('taxable').value==='1';
-      if(!amount || !date){ alert('Amount and Date are required'); return; }
-      const r = await fetch('/api/expenses', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ vendor, amount, date, taxable }) });
-      if(r.ok){ document.getElementById('amount').value=''; load(); } else { const t=await r.text(); alert('Error: '+t); }
-    });
-
-    document.addEventListener('click', async (e)=>{
-      if(e.target.matches('.del')){
-        const id=e.target.dataset.id; if(!confirm('Delete this expense?')) return;
-        const r = await fetch('/api/expenses/'+id, { method:'DELETE' });
-        if(r.ok) load(); else alert('Error deleting');
-      }
-      if(e.target.matches('.edit')){
-        const id=e.target.dataset.id;
-        const all = await (await fetch('/api/expenses')).json();
-        const x = all.find(y=>String(y.id)===String(id)); if(!x){ alert('Not found'); return; }
-        const vendor = prompt('Vendor:', x.vendor||''); if(vendor===null) return;
-        const amount = prompt('Amount:', x.amount); if(amount===null) return;
-        const date   = prompt('Date (YYYY-MM-DD):', x.date||''); if(date===null) return;
-        const taxS   = prompt('Taxable? (1=yes,0=no):', String(x.taxable?1:0)); if(taxS===null) return;
-        const r = await fetch('/api/expenses/'+id, { method:'PUT', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ vendor, amount, date, taxable: taxS==='1' }) });
-        if(r.ok) load(); else alert('Error updating');
-      }
-    });
-
-    // Prefill date to today
-    (function(){ const t=new Date(); document.getElementById('date').value = t.toISOString().slice(0,10); })();
-
-    load();
-  </script>
-</body>
-</html>
+<script>
+function fmt(x){return x||'';}
+async function load(){
+  const r=await fetch('/api/expenses'); const list=await r.json(); const tb=document.getElementById('tb'); tb.innerHTML='';
+  (list||[]).forEach(x=>{
+    const tr=document.createElement('tr');
+    tr.innerHTML = `
+      <td>${x.id}</td><td>${fmt(x.vendor)}</td><td>$${Number(x.amount||0).toFixed(2)}</td><td>${fmt(x.date)}</td><td>${Number(x.taxable)?'Yes':'No'}</td>
+      <td><button class="edit" data-id="${x.id}">Edit</button> <button class="del" data-id="${x.id}">Delete</button></td>`;
+    tb.appendChild(tr);
+  });
+}
+document.getElementById('add').onclick=async()=>{
+  const payload={ vendor:document.getElementById('vendor').value, amount:document.getElementById('amount').value, date:document.getElementById('date').value, taxable:document.getElementById('taxable').value==='1' };
+  const r=await fetch('/api/expenses',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
+  if(!r.ok){alert('Add failed');return;} load();
+};
+document.addEventListener('click', async (e)=>{
+  if(e.target.matches('.del')){ if(!confirm('Delete expense?'))return;
+    const r=await fetch('/api/expenses/'+e.target.dataset.id,{method:'DELETE'}); if(r.ok) load(); else alert('Delete failed'); }
+  if(e.target.matches('.edit')){
+    const id=e.target.dataset.id; const row=e.target.closest('tr'); const t=row.children;
+    const vendor=prompt('Vendor:', t[1].textContent)||''; if(vendor===null) return;
+    const amount=prompt('Amount:', (t[2].textContent||'').replace(/[^0-9.]/g,''))||''; if(amount===null) return;
+    const date=prompt('Date (YYYY-MM-DD):', t[3].textContent)||''; if(date===null) return;
+    const taxable=confirm('Taxable? OK=Yes, Cancel=No');
+    const r=await fetch('/api/expenses/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({vendor,amount,date,taxable})});
+    if(r.ok) load(); else alert('Update failed');
+  }
+});
+(function(){ const t=new Date(); document.getElementById('date').value=t.toISOString().slice(0,10);})();
+load();
+</script>
+</body></html>
