--- a/public/students.html
+++ b/public/students.html
@@ -1,219 +1,139 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Students</title>
-  <style>
-    body{font-family:sans-serif;max-width:1000px;margin:2rem auto}
-    table{border-collapse:collapse;width:100%} th,td{border:1px solid #ccc;padding:6px}
-    input,select,button{margin:2px}
-    img.thumb{height:120px;width:120px;object-fit:cover;border-radius:4px;border:1px solid #ddd}
-    .actions a, .actions button{margin-right:.3rem}
-    tr.highlight td{background:#dff3ff;}
-    a.btn{display:inline-block;padding:.25rem .5rem;border:1px solid #aaa;border-radius:4px;text-decoration:none;color:#000;margin:0 .2rem}
-  </style>
-</head>
-<body>
+<!DOCTYPE html><html lang="en"><head>
+<meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Students</title>
+<link rel="stylesheet" href="main.css"/>
+</head><body><div class="container">
   <h1>Students</h1>
-  <p>
-    <a class="btn" href="students_legacy.html">Open Old Students Page</a>
-    <a class="btn" href="index.html">Back to Main Page</a>
-  </p>
-
-  <h2>Add Student</h2>
-  <div>
-    <label>First Name <input id="first_name" required></label>
-    <label>Last Name <input id="last_name" required></label>
-    <label>Phone <input id="phone"></label>
-    <label>Program <input id="program"></label>
-    <label>Join Date <input type="date" id="start_date"></label>
-    <label>Renewal <input type="date" id="renewal_date"></label>
-    <label>Email <input id="email"></label>
-    <label>Address <input id="address"></label>
-    <label>Age <input id="age" type="number" min="0" style="width:5rem"></label>
-    <label>Photo URL (optional) <input id="photo_url"></label>
-    <label>Upload Photo <input id="photo_file" type="file" accept="image/*"></label>
-    <button id="addBtn">Add</button>
+  <div class="card">
+    <h2>Add / Edit Student</h2>
+    <div class="grid">
+      <input id="first_name" placeholder="First name" required>
+      <input id="last_name" placeholder="Last name">
+      <input id="phone" placeholder="Phone">
+      <input id="email" placeholder="Email">
+      <input id="program" placeholder="Program">
+      <input id="join_date" type="date" placeholder="Join date">
+      <input id="renewal_date" type="date" placeholder="Renewal date (+28d)">
+      <input id="address" placeholder="Address">
+    </div>
+    <div class="toolbar">
+      <button class="btn btn-primary" id="saveBtn">Save Student</button>
+      <span class="badge" id="status"></span>
+    </div>
   </div>
 
-  <h2>Student List</h2>
-  <table>
-    <thead>
-      <tr><th>Pic</th><th>Name</th><th>Phone</th><th>Program</th><th>Start</th><th>Renewal</th><th>Actions</th></tr>
-    </thead>
-    <tbody id="tbody"></tbody>
-  </table>
+  <div class="toolbar">
+    <button class="btn" id="showActive">Show Active</button>
+    <button class="btn" id="showOld">Show Old</button>
+  </div>
 
-  <script>
-    // Prefill from Leads (if coming via query)
-    (function(){
-      const u = new URL(location.href);
-      const m = k => u.searchParams.get(k);
-      const map = { first_name:'first_name', last_name:'last_name', phone:'phone', email:'email', program:'program' };
-      for (const [q,id] of Object.entries(map)) { const v=m(q); if(v) document.getElementById(id).value=v; }
-    })();
+  <div class="card">
+    <h2 id="listTitle">Active Students</h2>
+    <table class="table" id="studentsTable">
+      <thead><tr>
+        <th>Name</th><th>Phone</th><th>Program</th><th>Join</th><th>Renewal</th><th>Actions</th>
+      </tr></thead><tbody></tbody>
+    </table>
+  </div>
 
-    // Default dates (join=today, renewal=+28 days) if blank
-    (function(){
-      const t=new Date(); const fmt=d=>d.toISOString().slice(0,10);
-      const s = document.getElementById('start_date');
-      const r = document.getElementById('renewal_date');
-      if(!s.value) s.value = fmt(t);
-      if(!r.value){ const d=new Date(t); d.setDate(d.getDate()+28); r.value = fmt(d); }
-    })();
+  <p><a href="index.html">Back to Main</a></p>
+</div>
 
-    async function uploadPhotoIfAny() {
-      const f = document.getElementById('photo_file').files[0];
-      if (!f) return null;
-      const fd = new FormData(); fd.append('image', f);
-      let r;
-      try { r = await fetch('/api/uploads/image', { method:'POST', body: fd }); }
-      catch(e) { alert('Photo upload failed: ' + (e?.message||e)); return null; }
-      if (!r.ok) { const t=await r.text(); alert('Photo upload failed: ' + t); return null; }
-      const j = await r.json();
-      return j.url || null;
-    }
+<script>
+const $ = s => document.querySelector(s);
+const api = (p, opt) => fetch(p, opt).then(r => r.ok ? r.json() : r.json().then(e=>Promise.reject(e)));
+let showingOld = false;
+let editingId = null;
 
-    function rowHTML(s){
-      const full = (s.first_name||'')+' '+(s.last_name||'');
-      const pic  = s.photo ? `<img class="thumb" src="${s.photo}" alt="pic">` : '';
-      const oldLink = `students_legacy.html?id=${encodeURIComponent(s.id)}`;
-      const payLink = `payments_student.html?student_id=${encodeURIComponent(s.id)}`;
-      return `
-        <td>${pic}</td>
-        <td>${full}</td>
-        <td>${s.phone||''}</td>
-        <td>${s.program||''}</td>
-        <td>${s.start_date||''}</td>
-        <td>${s.renewal_date||''}</td>
-        <td class="actions">
-          <a href="${oldLink}">Old View</a>
-          <button class="to-old" data-id="${s.id}">Move to Old</button>
-          <a href="${payLink}">View Payments</a>
-          <button class="edit" data-id="${s.id}">Edit</button>
-          <button class="del" data-id="${s.id}">Delete</button>
-        </td>
-      `;
-    }
+// Default dates: today & +28d
+(function setDefaultDates(){
+  const join = $('#join_date'), renew = $('#renewal_date');
+  const fmt = d => d.toISOString().slice(0,10);
+  const now = new Date();
+  join.value = fmt(now);
+  const r = new Date(now); r.setDate(r.getDate()+28);
+  renew.value = fmt(r);
+  join.addEventListener('change', ()=>{
+    const d = new Date(join.value); if(!isNaN(d)) { d.setDate(d.getDate()+28); renew.value = fmt(d); }
+  });
+})();
 
-    async function load(){
-      const r = await fetch('/api/students'); // active list handled server-side if using is_legacy
-      const rows = await r.json();
-      const tb = document.getElementById('tbody'); tb.innerHTML='';
-      const u  = new URL(location.href);
-      const targetId = u.searchParams.get('id');
-      let targetTr = null;
-      (rows||[]).forEach(s=>{
-        const tr = document.createElement('tr'); tr.dataset.id = String(s.id);
-        tr.innerHTML = rowHTML(s);
-        if (targetId && String(s.id) === String(targetId)) { tr.classList.add('highlight'); targetTr = tr; }
-        tb.appendChild(tr);
-      });
-      if (targetTr) targetTr.scrollIntoView({ behavior: 'smooth', block: 'center' });
-    }
+async function load(){
+  const url = showingOld ? '/api/students?is_active=0' : '/api/students?is_active=1';
+  const data = await api(url);
+  const tb = $('#studentsTable tbody'); tb.innerHTML = '';
+  data.forEach(s=>{
+    const tr = document.createElement('tr');
+    const name = (s.first_name||'') + ' ' + (s.last_name||'');
+    tr.innerHTML = `
+      <td>${name}</td>
+      <td>${s.phone||''}</td>
+      <td>${s.program||''}</td>
+      <td>${s.join_date||''}</td>
+      <td>${s.renewal_date||''}</td>
+      <td>
+        <button class="btn" data-act="edit" data-id="${s.id}">Edit</button>
+        <button class="btn btn-danger" data-act="del" data-id="${s.id}">Delete</button>
+        ${s.is_active ? 
+          `<button class="btn btn-warn" data-act="archive" data-id="${s.id}">Archive</button>` :
+          `<button class="btn btn-primary" data-act="restore" data-id="${s.id}">Restore</button>`}
+      </td>`;
+    tb.appendChild(tr);
+  });
+  $('#listTitle').textContent = showingOld ? 'Old Students' : 'Active Students';
+}
+$('#showActive').onclick = ()=>{ showingOld=false; load(); };
+$('#showOld').onclick = ()=>{ showingOld=true; load(); };
 
-    async function addStudent(){
-      const first_name = document.getElementById('first_name').value.trim();
-      const last_name  = document.getElementById('last_name').value.trim();
-      if (!first_name || !last_name) { alert('First and Last name required'); return; }
-
-      // Ensure dates if user cleared them
-      const s = document.getElementById('start_date');
-      const r = document.getElementById('renewal_date');
-      if(!s.value){ const t=new Date(); s.value=t.toISOString().slice(0,10); }
-      if(!r.value){ const t=new Date(); t.setDate(t.getDate()+28); r.value=t.toISOString().slice(0,10); }
-
-      // photo
-      let photo = await uploadPhotoIfAny();
-      if (!photo) { const url = document.getElementById('photo_url').value.trim(); if (url) photo = url; }
-
-      const payload = {
-        first_name,
-        last_name,
-        phone:   document.getElementById('phone').value.trim() || null,
-        program: document.getElementById('program').value.trim() || null,
-        start_date:   document.getElementById('start_date').value || null,
-        renewal_date: document.getElementById('renewal_date').value || null,
-        email:   document.getElementById('email').value.trim() || null,
-        address: document.getElementById('address').value.trim() || null,
-        age:     Number(document.getElementById('age').value || 0) || null,
-        photo:   photo || null,
-        is_legacy: false
-      };
-
-      let rPost;
-      try {
-        rPost = await fetch('/api/students', {
-          method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload)
-        });
-      } catch(e) { alert('Network error adding student: ' + (e?.message||e)); return; }
-
-      if (!rPost.ok) { const text = await rPost.text(); alert('Error adding student: ' + text); return; }
-
-      // clear minimal fields and reload
-      document.getElementById('first_name').value = '';
-      document.getElementById('last_name').value  = '';
-      document.getElementById('photo_file').value = '';
-      document.getElementById('photo_url').value  = '';
-      await load();
-    }
-
-    document.getElementById('addBtn').addEventListener('click', addStudent);
-
-    document.addEventListener('click', async (e)=>{
-      // DELETE
-      if (e.target.matches('.del')) {
-        const id = e.target.dataset.id;
-        if (!confirm('Delete this student?')) return;
-        const r = await fetch('/api/students/'+id, { method:'DELETE' });
-        if (r.ok) load(); else alert('Error deleting');
+$('#studentsTable').addEventListener('click', async (e)=>{
+  const btn = e.target.closest('button'); if(!btn) return;
+  const id = btn.dataset.id; const act = btn.dataset.act;
+  try{
+    if (act==='edit'){
+      const s = await api('/api/students/'+id);
+      editingId = id;
+      for (const k of ['first_name','last_name','phone','email','program','join_date','renewal_date','address']){
+        const el = document.getElementById(k); if (el) el.value = s[k]||'';
       }
+      $('#status').textContent = 'Editing ID '+id;
+    } else if (act==='del'){
+      await api('/api/students/'+id, { method:'DELETE' });
+      load();
+    } else if (act==='archive'){
+      await api(`/api/students/${id}/archive`, { method:'POST' });
+      load();
+    } else if (act==='restore'){
+      await api(`/api/students/${id}/restore`, { method:'POST' });
+      load();
+    }
+  }catch(err){ alert(err.error||'Error'); }
+});
 
-      // EDIT (prompt-based, simple, preserves look)
-      if (e.target.matches('.edit')) {
-        const id = e.target.dataset.id;
-        const s = await (await fetch('/api/students/'+id)).json();
-        const first_name = prompt('First Name:', s.first_name||''); if(first_name===null) return;
-        const last_name  = prompt('Last Name:',  s.last_name||'');  if(last_name===null)  return;
-        const phone      = prompt('Phone:',      s.phone||'');      if(phone===null)      return;
-        const program    = prompt('Program:',    s.program||'');    if(program===null)    return;
-        const start_date = prompt('Start (YYYY-MM-DD):', s.start_date||''); if(start_date===null) return;
-        const renewal_date = prompt('Renewal (YYYY-MM-DD):', s.renewal_date||''); if(renewal_date===null) return;
-        const email      = prompt('Email:',      s.email||'');      if(email===null)      return;
-        const address    = prompt('Address:',    s.address||'');    if(address===null)    return;
-        const age        = prompt('Age:',        s.age||'');        if(age===null)        return;
-        const photo      = prompt('Photo URL (leave blank to keep current):', s.photo||''); if(photo===null) return;
-
-        const payload = {
-          first_name, last_name, phone, program, start_date, renewal_date,
-          email, address, age, photo: (photo ? photo : (s.photo||null))
-        };
-
-        const r = await fetch('/api/students/'+id, {
-          method:'PUT', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload)
-        });
-        if (r.ok) load(); else alert('Error updating');
-      }
-
-      // MOVE TO OLD (remove from list immediately after success)
-      if (e.target.matches('.to-old')) {
-        const id = e.target.dataset.id;
-        if (!confirm('Move this student to the Old Students page?')) return;
-        const r = await fetch('/api/students/'+id+'/legacy', {
-          method:'PUT', headers:{'Content-Type':'application/json'},
-          body: JSON.stringify({ is_legacy:true })
-        });
-        if (r.ok) {
-          // remove the row instantly so it disappears from current list
-          const tr = e.target.closest('tr'); if (tr) tr.remove();
-        } else {
-          alert('Error moving');
-        }
-      }
-    });
-
+$('#saveBtn').onclick = async ()=>{
+  const body = {
+    first_name: $('#first_name').value.trim(),
+    last_name:  $('#last_name').value.trim(),
+    phone:      $('#phone').value.trim(),
+    email:      $('#email').value.trim(),
+    program:    $('#program').value.trim(),
+    join_date:  $('#join_date').value,
+    renewal_date: $('#renewal_date').value,
+    address:    $('#address').value.trim(),
+    is_active:  1
+  };
+  const opt = { method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(body) };
+  try{
+    if (editingId){
+      await api('/api/students/'+editingId, { ...opt, method:'PUT' });
+      editingId = null; $('#status').textContent = 'Saved.';
+    } else {
+      await api('/api/students', opt);
+      $('#status').textContent = 'Added.';
+    }
     load();
-  </script>
-</body>
-</html>
+  }catch(err){ alert(err.error||'Error'); }
+};
 
+load();
+</script>
+</body></html>
